@@ -1,2 +1,3 @@
 usr/share/apport/*gtk*
 #../../gtk/apport-gtk.desktop usr/share/applications
+../../gtk/apport-gtk-mime.desktop usr/share/applications
