@@ -1,6 +1,6 @@
 top_srcdir = ..
 
-all: apport-gtk.desktop
+all: apport-gtk.desktop apport-gtk-mime.desktop
 
 %.desktop : %.desktop.in
 	intltool-merge -d ${top_srcdir}/po/ $< $@
